fix sort arrow spacing for table right hand side

--- a/src/irb-app/irb-result/table-chart/index.styl
+++ b/src/irb-app/irb-result/table-chart/index.styl
@@ -27,6 +27,7 @@ border-gray = lighten(background-gray, 30%)
         display inline-block
         font-weight bold
         padding 8px 9px 8px 9px
+        padding-right 21px
         &:first-child
           border-left 2px solid border-gray
 
@@ -35,7 +36,7 @@ border-gray = lighten(background-gray, 30%)
           background-repeat no-repeat
           display inline-block
           height 10px
-          margin-left 10px
+          margin-left 5px
           opacity 0
           width 8px
           &.sort-desc
@@ -61,6 +62,7 @@ border-gray = lighten(background-gray, 30%)
         border-top none
         border-bottom none
         padding 8px
+        padding-right 20px
 
       td
         color medium-gray
